// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ImprovementFilesOverview > renders empty state correctly for user with edit rights 1`] = `
<empty-view-stub
  data-v-8acec1af=""
  description="Add files and pictures to document the improvement journey."
  descriptionrows=""
  header="No files added"
  id="improvement-files-empty-view"
  imgurl="fishbone"
  imgwidth=""
  primarybtn="File"
  primarybtnicon="M19,13H13V19H11V13H5V11H11V5H13V11H19V13Z"
  secondarybtn=""
  secondarybtncolor=""
  secondarybtnicon=""
  small="false"
  tertiarybtn=""
  tertiarybtnicon=""
/>
`;

exports[`ImprovementFilesOverview > renders empty state correctly for user without edit rights 1`] = `
<empty-view-stub
  data-v-8acec1af=""
  description=""
  descriptionrows=""
  header="No files added"
  id="improvement-files-empty-view"
  imgurl="fishbone"
  imgwidth=""
  primarybtn=""
  primarybtnicon="M19,13H13V19H11V13H5V11H11V5H13V11H19V13Z"
  secondarybtn=""
  secondarybtncolor=""
  secondarybtnicon=""
  small="false"
  tertiarybtn=""
  tertiarybtnicon=""
/>
`;
